clusters/lynka/kubernetes/apps/monitoring/grafana/operator/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana-operator-to-grafana
spec:
  endpointSelector:
    matchLabels: &operator-labels
      app.kubernetes.io/name: grafana-operator
  ingress:
    - fromEndpoints:
        - matchLabels: *operator-labels
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/managed-by: grafana-operator
